# incus-lab-manager

./: .gitignore  .woodpecker copy 2.yml  .woodpecker.yml  Cargo.toml  Makefile  Plan_of_realisation.md  README.md  demo-lab.yaml
certs/: browser.p12  client.crt  client.key
labs/: test.yaml
src/: client.rs  config.rs  lab.rs  lab_old.rs  lib.rs  main.rs  remotes.rs
src/incus/: mod.rs  mod_old.rs
src/incus/custom/: config_map.rs  devices_map.rs  mod.rs
src/incus/generated_prototype/: backup_target.rs  certificate.rs  certificate_add_token.rs  certificate_put.rs  certificates_post.rs  cluster.rs  cluster_group.rs  cluster_group_post.rs  cluster_group_put.rs  cluster_groups_post.rs  cluster_member.rs  cluster_member_config_key.rs  cluster_member_put.rs  cluster_member_state.rs  cluster_member_sys_info.rs  cluster_members_post.rs  cluster_put.rs  config_map.rs  devices_map.rs  event.rs  event_lifecycle.rs  event_lifecycle_requestor.rs  event_logging.rs  image.rs  image_alias.rs  image_aliases_entry.rs  image_aliases_entry_put.rs  image_aliases_post.rs  image_metadata.rs  image_metadata_template.rs  image_put.rs  image_source.rs  images_post.rs  images_post_source.rs  instance.rs  instance_backup.rs  instance_backups_post.rs  instance_full.rs  instance_put.rs  instance_snapshot.rs  (+120 more)
tests/: integration_lab.rs  integration_lab_old.rs  serde_dto.rs  serde_dto_old.rs
tests/common/: mod.rs
